[package]
name = "dash-button-rs"
version = "0.1.0"
authors = ["Mikołaj Robakowski <mikolaj.rob+opensource@gmail.com>"]
build = "build.rs"

[dependencies]
pcap = "0.5.7"
error-chain = "0.10.0"
libc = "0.2.21"
try_from = "0.2.1"

[build-dependencies]
csv = "0.15.0"

[[example]]
name = "find-dash-button"

[dev-dependencies]
chrono = "0.3.0"
